--- a/jade/index.jade
+++ b/jade/index.jade
@@ -6,13 +6,9 @@ html
     meta(name='author', content='Eirik Brandtzæg, eirikb@eirikb.no')
     meta(charset='utf-8')
 
-    link(rel='stylesheet', href='css/style.css')
+    each style in styles
+      link(rel='stylesheet', href='dist/' + style)
 
-    script(src='//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js')
-    script(src='//cdnjs.cloudflare.com/ajax/libs/datatables/1.9.4/jquery.dataTables.min.js')
-    script(src='//cdnjs.cloudflare.com/ajax/libs/history.js/1.7.1/native.history.js')
-    script(src='js/fnSetFilteringDelay.js')
-    script(src='js/main.js')
     script
       var _gaq=_gaq || [];
       _gaq.push(['_setAccount','UA-28988150-1']);
@@ -44,3 +40,10 @@ html
               th.tiny stargazers
               th.tiny stars
               th.tiny npm
+
+      script(src='//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js')
+      script(src='//cdnjs.cloudflare.com/ajax/libs/datatables/1.9.4/jquery.dataTables.min.js')
+      script(src='//cdnjs.cloudflare.com/ajax/libs/history.js/1.7.1/native.history.js')
+
+      each script in scripts
+        script(src='dist/' + script)
