--- a/less/source.less
+++ b/less/source.less
@@ -1,157 +1,165 @@
 body {
-    background: none repeat scroll 0 0 #EFF2F3;
-    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background: none repeat scroll 0 0 #EFF2F3;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
-    color: #00B7FF;
+  color: #00B7FF;
 }
 
 th {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .wrapper {
-    background: none repeat scroll 0 0 #FFFFFF;
-    border: 1px solid #AFAFAF;
-    -moz-border-radius: 5px 5px 5px 5px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    border-radius: 10px;
-    min-width: 1000px;
-    margin: 10px auto;
+  background: none repeat scroll 0 0 #FFFFFF;
+  border: 1px solid #AFAFAF;
+  -moz-border-radius: 5px 5px 5px 5px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  min-width: 1000px;
+  margin: 10px auto;
 }
 
 .content {
-    padding: 10px;
+  padding: 10px;
 }
 
-.npm {
-    height: 100px;
+ul.header {
+  list-style: none;
 }
 
-.npm img {
-    height: 50px;
-    display: inline;
+ul.header li {
+  float: left;
 }
 
-.npm span {
-    margin-left: 15px;
-    margin-right: 15px;
+.header {
+  height: 100px;
+}
+
+.header img {
+  height: 50px;
+  display: inline;
+}
+
+.header span {
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .plus {
-    font-size: 40px;
+  font-size: 40px;
 }
 
 span.big {
-    margin-left: 0px;
-    font-size: 30px;
+  margin-left: 0px;
+  font-size: 30px;
 }
 
 input {
-    -moz-border-radius: 5px 5px 5px 5px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    border-radius: 10px;
-    border: solid 1px #494949;
-    outline: none;
-    padding: 5px;
+  -moz-border-radius: 5px 5px 5px 5px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  border: solid 1px #494949;
+  outline: none;
+  padding: 5px;
 }
 
 table {
-    width: 100%;
-    table-layout: fixed;
+  width: 100%;
+  table-layout: fixed;
 }
 
 .dataTables_paginate {
-    padding-top: 10px;
+  padding-top: 10px;
 }
 
 .dataTables_paginate a {
-    color: #000000;
+  color: #000000;
 }
 
 .paging_full_numbers .paginate_button,
 .paging_full_numbers .paginate_active {
-    border: 1px solid #494949;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    padding: 2px 5px;
-    margin: 0 3px;
-    cursor: pointer;
+  border: 1px solid #494949;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  padding: 2px 5px;
+  margin: 0 3px;
+  cursor: pointer;
 }
 
 .dataTables_paginate {
-    padding-top: 10px;
+  padding-top: 10px;
 }
 
 .paging_full_numbers .paginate_button {
-    background-color: #FEFEFE;
+  background-color: #FEFEFE;
 }
 
 .paging_full_numbers .paginate_button:hover {
-    background-color: #EFF2F3;
+  background-color: #EFF2F3;
 }
 
 .paging_full_numbers .paginate_active {
-    background-color: #BEDCE7;
+  background-color: #BEDCE7;
 }
 
 .sorting_desc, .sorting_asc {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 tr {
-    height: 1em;
+  height: 1em;
 }
 
 tr.odd {
-    background-color: #FFCCCC;
+  background-color: #FFCCCC;
 }
 
 tr.even {
-    background-color: white;
+  background-color: white;
 }
 
 th.medium {
-    width: 15%;
+  width: 15%;
 }
 
 th.small {
-    width: 9%;
+  width: 9%;
 }
 
 th.tiny {
-    width: 6%;
+  width: 6%;
 }
 
 a.npm {
-    margin-left: 15px;
+  margin-left: 15px;
 }
 
 tr {
-    line-height: 20px;
+  line-height: 20px;
 }
 
 tr.odd:hover, tr.even:hover {
-    background-color: #FFAAAA;
+  background-color: #FFAAAA;
 }
 
 td {
-    overflow: hidden;
-    white-space: nowrap; 
+  overflow: hidden;
+  white-space: nowrap; 
 }
 
 .lastUpdate {
-    float: right;
-    padding-right: 200px;
+  float: right;
+  padding-right: 200px;
 }
 
 .fork {
-    position: absolute; 
-    top: 0; 
-    right: 0; 
-    border: 0; 
-    z-index: 50;
+  position: absolute; 
+  top: 0; 
+  right: 0; 
+  border: 0; 
+  z-index: 50;
 }
